# couswork_django

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: admin.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_owner.py
client/templates/client/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
communication/: admin.py  forms.py  models.py  urls.py  views.py
communication/migrations/: 0001_initial.py  0002_alter_communication_links.py  0002_communication_owner.py
communication/templates/: communication_confirm_delete.html  communication_detail.html  communication_form.html  communication_list.html
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_alter_mailing_client_alter_mailing_communication_and_more.py  0002_initial.py  0003_alter_mailing_owner_delete_emailstatistics.py  0003_mailing_created_at_mailing_updated_at.py  0004_mailingattempt.py
mailing/templates/: home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  result.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_phone_number.py
users/templates/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html
users/templates/users/: user_form.html
(+1 files in other folders)
